--- a/data_import.html
+++ b/data_import.html
@@ -462,19 +462,54 @@ div.tocify {
 
 
 <p>Importing is the first step in wrangling.</p>
-<p>This is the first module in the <a href="topic_data_wrangling_i.html">Data Wrangling I</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CN898UWNB">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<script async class="speakerdeck-embed" data-id="d59e5ea4d1674e6785ec9aea6620b7b2" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<p>This is the first module in the <a href="topic_data_wrangling_i.html">Data Wrangling I</a> topic.</p>
+<div id="overview" class="section level2 tabset tabset-pills">
+<h2>Overview</h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning Objectives</h3>
+<p>Read data into R from a variety of sources and parse variable types.</p>
+</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://speakerdeck.com/player/d59e5ea4d1674e6785ec9aea6620b7b2" 
+    allowfullscreen 
+    frameborder="0"
+    class="video"> </iframe></p>
+</div>
 <div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-data-import" title="Data Import" target="_blank">Data Import</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
+<strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-data-import" title="Writing with data" target="_blank">Data Import</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
 </div>
 <p><br></p>
+<hr />
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video"> </iframe></p>
+</div>
+<hr />
+</div>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
 <p>We’re going to figure out how to import the datasets in <a href="./resources/data_import_examples.zip">this zip file</a>. First, create a GitHub repo + local R project for today’s work (I’m calling mine <code>data_wrangling_i</code>). Move the datasets to your repo / directory (perhaps in a sub-directory called <code>data</code>), and start an R Markdown file. We’re also going to be making extensive use of the <code>tidyverse</code> package, so go ahead and load that in a “setup” code chunk.</p>
-<pre class="r"><code>library(tidyverse)</code></pre>
+<pre class="r"><code>library(tidyverse)
+## Warning: package &#39;tidyverse&#39; was built under R version 3.6.3
+## -- Attaching packages ---------------------------------------------------- tidyverse 1.3.0 --
+## v ggplot2 3.3.0     v purrr   0.3.2
+## v tibble  2.1.3     v dplyr   0.8.3
+## v tidyr   1.0.2     v stringr 1.4.0
+## v readr   1.3.1     v forcats 0.5.0
+## Warning: package &#39;ggplot2&#39; was built under R version 3.6.3
+## Warning: package &#39;tidyr&#39; was built under R version 3.6.3
+## Warning: package &#39;forcats&#39; was built under R version 3.6.3
+## -- Conflicts ------------------------------------------------------- tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()</code></pre>
 <div id="paths" class="section level3">
 <h3>Paths</h3>
 <p>We’ve mentioned paths and your working directory in passing (when talking about <a href="best_practices.html">best practices</a>). A firmer understanding is helpful when you start loading data into R, because to load data R will have to know where to find it.</p>
@@ -490,7 +525,7 @@ div.tocify {
 <p>(Hint: if you ever use <code>setwd()</code>, you’re using absolute paths and <a href="https://twitter.com/hadleywickham/status/940021008764846080">taking big risks</a>…)</p>
 <p>The code below finds my current working directory:</p>
 <pre class="r"><code>getwd()
-## [1] &quot;/Users/jeffgoldsmith/Dropbox/Work/Teaching/P8105/fall_2020/p8105.github.io&quot;</code></pre>
+## [1] &quot;C:/Users/Owner/Documents/Data Science I/p8105.github.io&quot;</code></pre>
 <p>A relative path to the same file as the absolute path above is</p>
 <pre><code>&quot;./data/FAS_litters.csv&quot;</code></pre>
 <p>The table below, copied from <a href="https://geanders.github.io/RProgrammingForResearch/entering-and-cleaning-data-1.html#file-and-directory-pathnames">R Programming for Research</a>, gives useful shorthand notation for relative pathnames.</p>
@@ -549,7 +584,7 @@ litters_data = janitor::clean_names(litters_data)
 names(litters_data)
 ## [1] &quot;group&quot;           &quot;litter_number&quot;   &quot;gd0_weight&quot;      &quot;gd18_weight&quot;    
 ## [5] &quot;gd_of_birth&quot;     &quot;pups_born_alive&quot; &quot;pups_dead_birth&quot; &quot;pups_survive&quot;</code></pre>
-<p>The <code>package::function</code> syntax lets you use a function from a package without loading the whole library. That’s really helpful, because some packages have functions with the same name (e.g. <code>dplyr::filter</code> and <code>stats::filter</code>), and R has to choose which one you mean. In general, only load the packages you need to prevent this kind of confusion. You can even use the <a href="https://github.com/r-lib/conflicted"><code>conflicted</code></a> package if you want to force yourself into using good habits!</p>
+<p>The <code>package::function</code> syntax lets you use a function from a package without loading the whole library. That’s really helpful, because some packages have functions with the same name (e.g. <code>dplyr::filter</code> and <code>stats::filter</code>), and R has to choose which one you mean. In general, only load the packages you need to prevent this kind of confusion. You can even use the <a href="https://github.com/r-lib/conflicted"><code>conflicted</code></a> package if you want to force yourself into using good habits!</p>
 <p><strong><em>Learning Assessment:</em></strong> Make sure you are able to load the <code>FAS_pups.csv</code> dataset. Use both absolute and relative paths. Quit R Studio and move the directory containing your project, data, and R Markdown document. Repeat the previous data import process; do both absolute and relative paths still work?</p>
 <details>
 <p><summary> Solution </summary></p>
@@ -572,11 +607,11 @@ pups_data = read_csv(file = &quot;~/Desktop/data_wranging_i/data/FAS_litters.csv
 ##  4 Con7  #5/4/2/95/2         28.5        44.1          19               5
 ##  5 Con7  #4/2/95/3-3         NA          NA            20               6
 ##  6 Con7  #2/2/95/3-2         NA          NA            20               6
-##  7 Con7  #1/5/3/83/3-…       NA          NA            20               9
+##  7 Con7  #1/5/3/83/3-~       NA          NA            20               9
 ##  8 Con8  #3/83/3-3           NA          NA            20               9
 ##  9 Con8  #2/95/3             NA          NA            20               8
 ## 10 Con8  #3/5/2/2/95         28.5        NA            20               8
-## # … with 39 more rows, and 2 more variables: pups_dead_birth &lt;dbl&gt;,
+## # ... with 39 more rows, and 2 more variables: pups_dead_birth &lt;dbl&gt;,
 ## #   pups_survive &lt;dbl&gt;
 tail(litters_data, 5)
 ## # A tibble: 5 x 8
@@ -587,7 +622,7 @@ tail(litters_data, 5)
 ## 3 Low8  #108                25.6        47.5          20               8
 ## 4 Low8  #99                 23.5        39            20               6
 ## 5 Low8  #110                25.5        42.7          20               7
-## # … with 2 more variables: pups_dead_birth &lt;dbl&gt;, pups_survive &lt;dbl&gt;</code></pre>
+## # ... with 2 more variables: pups_dead_birth &lt;dbl&gt;, pups_survive &lt;dbl&gt;</code></pre>
 <p>Another tool that I use sometimes is <code>skimr::skim</code>. The output is too wide to render well here, but is pretty slick!</p>
 <pre class="r"><code>skimr::skim(litters_data)</code></pre>
 <table>
@@ -828,8 +863,8 @@ tail(litters_data)
 ## 4 Low8  #108                    25.6          47.5            20
 ## 5 Low8  #99                     23.5          39              20
 ## 6 Low8  #110                    25.5          42.7            20
-## # … with 3 more variables: `Pups born alive` &lt;int&gt;, `Pups dead @ birth` &lt;int&gt;,
-## #   `Pups survive` &lt;int&gt;</code></pre>
+## # ... with 3 more variables: `Pups born alive` &lt;int&gt;, `Pups dead @
+## #   birth` &lt;int&gt;, `Pups survive` &lt;int&gt;</code></pre>
 <p>Column parsing also allows a shorthand for almost every data type.</p>
 <pre class="r"><code>litters_data = read_csv(file = &quot;./data/FAS_litters.csv&quot;,
   col_types = &quot;ccddiiii&quot;
@@ -848,7 +883,7 @@ litters_data
 ##  8 Con8  #3/83/3-3               NA            NA              20
 ##  9 Con8  #2/95/3                 NA            NA              20
 ## 10 Con8  #3/5/2/2/95             28.5          NA              20
-## # … with 39 more rows, and 3 more variables: `Pups born alive` &lt;int&gt;, `Pups
+## # ... with 39 more rows, and 3 more variables: `Pups born alive` &lt;int&gt;, `Pups
 ## #   dead @ birth` &lt;int&gt;, `Pups survive` &lt;int&gt;</code></pre>
 <p><strong><em>Learning Assessment:</em></strong> Repeat the data import process above for the file <code>FAS_pups.csv</code>. Make sure the column names are reasonable, and take some quick looks at the dataset. What happens if your specifications for column parsing aren’t reasonable (e.g. character instead of double, or vice versa)?</p>
 <details>
@@ -864,19 +899,21 @@ skimr::skim(pups_data)</code></pre>
 <p>Non-csv plain text files (e.g. tab delimited files) can be handled using <code>read_table</code>. This is very similar to <code>read_csv</code>, but you have to specify a delimiter.</p>
 <p>CSV format is great, but you’ll encounter a lot of Excel files too. Although you can export these to a csv, don’t – use the <code>readxl</code> package instead! This is tidyverse-adjacent but you’ll have to download and install it separately. The <code>read_excel</code> function in this package has many of the same arguments as <code>read_csv</code>, including <code>col_names</code>, <code>na</code>, <code>skip</code>, and <code>col_types</code>, and can be used in basically the same way. There is also a <code>sheet</code> option (useful when there are multiple sheets in the Excel file) and the <code>range</code> option (when you want to read in a specific data rectangle). Lastly, in RStudio you can use File &gt; Import Dataset &gt; From Excel for a GUI interface. The code below illustrates <code>read_excel</code>.</p>
 <pre class="r"><code>library(readxl)
+## Warning: package &#39;readxl&#39; was built under R version 3.6.3
 mlb11_data = read_excel(&quot;data/mlb11.xlsx&quot;, n_max = 20)
 head(mlb11_data, 5)
 ## # A tibble: 5 x 12
 ##   team   runs at_bats  hits homeruns bat_avg strikeouts stolen_bases  wins
 ##   &lt;chr&gt; &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt;    &lt;dbl&gt;   &lt;dbl&gt;      &lt;dbl&gt;        &lt;dbl&gt; &lt;dbl&gt;
-## 1 Texa…   855    5659  1599      210   0.283        930          143    96
-## 2 Bost…   875    5710  1600      203   0.28        1108          102    90
-## 3 Detr…   787    5563  1540      169   0.277       1143           49    95
-## 4 Kans…   730    5672  1560      129   0.275       1006          153    71
-## 5 St. …   762    5532  1513      162   0.273        978           57    90
-## # … with 3 more variables: new_onbase &lt;dbl&gt;, new_slug &lt;dbl&gt;, new_obs &lt;dbl&gt;</code></pre>
+## 1 Texa~   855    5659  1599      210   0.283        930          143    96
+## 2 Bost~   875    5710  1600      203   0.28        1108          102    90
+## 3 Detr~   787    5563  1540      169   0.277       1143           49    95
+## 4 Kans~   730    5672  1560      129   0.275       1006          153    71
+## 5 St. ~   762    5532  1513      162   0.273        978           57    90
+## # ... with 3 more variables: new_onbase &lt;dbl&gt;, new_slug &lt;dbl&gt;, new_obs &lt;dbl&gt;</code></pre>
 <p>The last tidyverse package for data import we’ll note is <code>haven</code>, which is used to import into R data files from SAS, Stata, and SPSS. An example for reading data from SAS follows.</p>
 <pre class="r"><code>library(haven)
+## Warning: package &#39;haven&#39; was built under R version 3.6.3
 pulse_data = read_sas(&quot;./data/public_pulse_data.sas7bdat&quot;)
 head(pulse_data, 5)
 ## # A tibble: 5 x 7
