--- a/exploratory_analysis.html
+++ b/exploratory_analysis.html
@@ -462,14 +462,37 @@ div.tocify {
 
 
 <p>Data sets can frequently be partitioned into meaningful groups based on the variables they contain. Making this grouping explicit allows the computation of numeric summaries within groups, which in turn facilitates quantitative comparisons.</p>
-<p>This is the second module in the <a href="topic_visualization_and_eda.html">Visualization and EDA</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CN01ALHR7">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<script async class="speakerdeck-embed" data-id="38db98aa225d41a0a0d7fec84ae7a259" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<p>This is the second module in the <a href="topic_visualization_and_eda.html">Visualization and EDA</a> topic.</p>
+<div id="overview" class="section level2 tabset tabset-pills">
+<h2>Overview</h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning Objectives</h3>
+<p>Conduct exploratory analyses using <code>dplyr</code> verbs (group_by and summarize).</p>
+</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://speakerdeck.com/player/38db98aa225d41a0a0d7fec84ae7a259" 
+    allowfullscreen 
+    frameborder="0"
+    class="video"> </iframe></p>
+</div>
 <div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jeffgoldsmith/dsi-exploratory-analysis" title="Exploratory analysis" target="_blank">Exploratory Analysis</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
+<strong> <a href="https://speakerdeck.com/jeffgoldsmith/dsi-exploratory-analysis" title="Exploratory Analysis" target="_blank">Exploratory Analysis</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
 </div>
 <p><br></p>
+<hr />
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video"> </iframe></p>
+</div>
+<hr />
+</div>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
@@ -517,7 +540,7 @@ div.tocify {
 ## 4 CentralPark_NY USW00094728 2017-01-04 2017-01-01     0  11.1   1.1
 ## 5 CentralPark_NY USW00094728 2017-01-05 2017-01-01     0   1.1  -2.7
 ## 6 CentralPark_NY USW00094728 2017-01-06 2017-01-01    13   0.6  -3.8
-## # … with 1,089 more rows</code></pre>
+## # ... with 1,089 more rows</code></pre>
 <p>Several important functions respect grouping structures. You will frequently use <code>summarize</code> to create one-number summaries within each group, or use <code>mutate</code> to define variables within groups. The rest of this example shows these functions in action.</p>
 <p>Because these (and other) functions will use grouping information if it exists, it is sometimes necessary to remove groups using <code>ungroup()</code>.</p>
 </div>
@@ -543,7 +566,7 @@ div.tocify {
 ## 11 2017-11-01    90
 ## 12 2017-12-01    93</code></pre>
 <p>The result is a dataframe that includes the grouping variable and the desired summary.</p>
-<p>In this case, you could use <code>count()</code> in place of <code>group_by()</code> and <code>summarize()</code> if you remember that this function exists. I’ll also make use of the <code>name</code> argument in count, which defaults to <code>&quot;n&quot;</code>.</p>
+<p>In this case, you could use <code>count()</code> in place of <code>group_by()</code> and <code>summarize()</code> if you remember that this function exists. I’ll also make use of the <code>name</code> argument in count, which defaults to <code>"n"</code>.</p>
 <pre class="r"><code>weather_df %&gt;%
   count(month, name = &quot;n_days&quot;)
 ## # A tibble: 12 x 2
@@ -640,9 +663,9 @@ div.tocify {
 ##  2 2017-02-01      12.2     57.9          8.3   12.1 
 ##  3 2017-03-01      13.0     54.6          8.3   12.4 
 ##  4 2017-04-01      17.3     32.9         18.3   11.2 
-##  5 2017-05-01      NA       28.4         NA     NA   
+##  5 2017-05-01      NA       28.4         NA    NaN   
 ##  6 2017-06-01      23.5     18.7         27.2    8.73
-##  7 2017-07-01      NA       12.7         NA     NA   
+##  7 2017-07-01      NA       12.7         NA    NaN   
 ##  8 2017-08-01      26.3     10.2         27.2    5.87
 ##  9 2017-09-01      23.8      9.94        26.1    8.42
 ## 10 2017-10-01      20.1     41.5         22.2    9.75
@@ -664,7 +687,7 @@ div.tocify {
 ## 4 CentralPark_NY 2017-04-01     18.3         18.3
 ## 5 CentralPark_NY 2017-05-01     20.1         19.4
 ## 6 CentralPark_NY 2017-06-01     26.3         27.2
-## # … with 30 more rows</code></pre>
+## # ... with 30 more rows</code></pre>
 <p>The fact that <code>summarize()</code> produces a dataframe is important (and consistent with other functions in the <code>tidyverse</code>). You can incorporate grouping and summarizing within broader analysis pipelines. For example, we can take create a plot based on the monthly summary:</p>
 <pre class="r"><code>weather_df %&gt;%
   group_by(name, month) %&gt;%
@@ -791,13 +814,13 @@ div.tocify {
 ## # Groups:   name, month [36]
 ##   name           id         date       month       prcp  tmax  tmin temp_ranking
 ##   &lt;chr&gt;          &lt;chr&gt;      &lt;date&gt;     &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;        &lt;int&gt;
-## 1 CentralPark_NY USW000947… 2017-01-01 2017-01-01     0   8.9   4.4           22
-## 2 CentralPark_NY USW000947… 2017-01-02 2017-01-01    53   5     2.8           12
-## 3 CentralPark_NY USW000947… 2017-01-03 2017-01-01   147   6.1   3.9           15
-## 4 CentralPark_NY USW000947… 2017-01-04 2017-01-01     0  11.1   1.1           27
-## 5 CentralPark_NY USW000947… 2017-01-05 2017-01-01     0   1.1  -2.7            5
-## 6 CentralPark_NY USW000947… 2017-01-06 2017-01-01    13   0.6  -3.8            4
-## # … with 1,089 more rows</code></pre>
+## 1 CentralPark_NY USW000947~ 2017-01-01 2017-01-01     0   8.9   4.4           22
+## 2 CentralPark_NY USW000947~ 2017-01-02 2017-01-01    53   5     2.8           12
+## 3 CentralPark_NY USW000947~ 2017-01-03 2017-01-01   147   6.1   3.9           15
+## 4 CentralPark_NY USW000947~ 2017-01-04 2017-01-01     0  11.1   1.1           27
+## 5 CentralPark_NY USW000947~ 2017-01-05 2017-01-01     0   1.1  -2.7            5
+## 6 CentralPark_NY USW000947~ 2017-01-06 2017-01-01    13   0.6  -3.8            4
+## # ... with 1,089 more rows</code></pre>
 <p>This sort of ranking is useful when filtering data based on rank. We could, for example, keep only the day with the lowest max temperature within each month:</p>
 <pre class="r"><code>weather_df %&gt;%
   group_by(name, month) %&gt;%
@@ -812,7 +835,7 @@ div.tocify {
 ## 4 CentralPark_NY USW00094728 2017-04-01 2017-04-01     0   8.9   2.8
 ## 5 CentralPark_NY USW00094728 2017-05-13 2017-05-01   409  11.7   7.2
 ## 6 CentralPark_NY USW00094728 2017-06-06 2017-06-01    15  14.4  11.1
-## # … with 36 more rows</code></pre>
+## # ... with 36 more rows</code></pre>
 <p>We could also keep the three days with the highest max temperature:</p>
 <pre class="r"><code>weather_df %&gt;%
   group_by(name, month) %&gt;%
@@ -827,7 +850,7 @@ div.tocify {
 ## 4 CentralPark_NY USW00094728 2017-02-19 2017-02-01     0  18.3  11.7
 ## 5 CentralPark_NY USW00094728 2017-02-23 2017-02-01     0  18.3   6.7
 ## 6 CentralPark_NY USW00094728 2017-02-24 2017-02-01     0  21.1  14.4
-## # … with 143 more rows</code></pre>
+## # ... with 143 more rows</code></pre>
 <p>In both of these, we’ve skipped a <code>mutate()</code> statement that would create a ranking variable, and gone straight to filtering based on the result.</p>
 <p>Offsets, especially lags, are used to compare an observation to it’s previous value. This is useful, for example, to find the day-by-day change in max temperature within each station over the year:</p>
 <pre class="r"><code>weather_df %&gt;%
@@ -843,7 +866,7 @@ div.tocify {
 ## 4 CentralPark_NY USW00094728 2017-01-04 2017-01-01     0  11.1   1.1        5   
 ## 5 CentralPark_NY USW00094728 2017-01-05 2017-01-01     0   1.1  -2.7      -10   
 ## 6 CentralPark_NY USW00094728 2017-01-06 2017-01-01    13   0.6  -3.8       -0.5 
-## # … with 1,089 more rows</code></pre>
+## # ... with 1,089 more rows</code></pre>
 <p>This kind of variable might be used to quantify the day-by-day variability in max temperature, or to identify the largest one-day increase:</p>
 <pre class="r"><code>weather_df %&gt;%
   group_by(name) %&gt;%
