--- a/making_websites.html
+++ b/making_websites.html
@@ -462,14 +462,37 @@ div.tocify {
 
 
 <p>This page outlines the process of making a basic website using R Markdown, and hosting that website on GitHub – the content assumes familiarity with both .Rmd and GitHub.</p>
-<p>This is the first module in the <a href="topic_interactivity.html">Interactivity</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CN6DF7F1B">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<script async class="speakerdeck-embed" data-id="e4897332b1e345e8a223b5e82fc61504" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<p>This is the first module in the <a href="topic_interactivity.html">Interactivity</a> topic.</p>
+<div id="overview" class="section level2 tabset tabset-pills">
+<h2>Overview</h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning Objectives</h3>
+<p>Publish a personal website using GitHub pages.</p>
+</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://speakerdeck.com/player/e4897332b1e345e8a223b5e82fc61504" 
+    allowfullscreen 
+    frameborder="0"
+    class="video"> </iframe></p>
+</div>
 <div style="margin-bottom:5px">
-<strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-making-websites" title="Making websites" target="_blank">Making Websites</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
+<strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-making-websites" title="Making Websites" target="_blank">Making Websites</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
 </div>
 <p><br></p>
+<hr />
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video"> </iframe></p>
+</div>
+<hr />
+</div>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
@@ -493,7 +516,7 @@ div.tocify {
 <h3>Common content</h3>
 <p>Your website can include text, of course; you can also include code and figures generated from analyses. Like I keep saying, you’re writing in RMD.</p>
 <p>One important feature of your site will be hyperlinks. The general format for links is <code>[text for link](address.of.link)</code>. So, to link to my favorite tool for data science, I’d use <code>[this](google.com)</code>.</p>
-<p>Your website usually has more than one page. These pages can be created using the same process as <code>index.html</code>: create an Rmd file and knit to html. Once you have another page (e.g. <code>about.html</code>) you need to link to it from your home page (e.g. using use <code>[about](about.html)</code>), or no one will be able to find it.</p>
+<p>Your website usually has more than one page. These pages can be created using the same process as <code>index.html</code>: create an Rmd file and knit to html. Once you have another page (e.g. <code>about.html</code>) you need to link to it from your home page (e.g. using use <code>[about](about.html)</code>), or no one will be able to find it.</p>
 <p>Sometimes you want to add images – pictures you’ve taken or found on the internets, rather than things that are generated from analyses. This is a bit more involved than other things you might want to do. RMD’s default image settings (using <code>![](image.jpg)</code>) aren’t great. I often use a line of HTML:</p>
 <pre class="r"><code>&lt;img src=&quot;images/image.jpg&quot; style=&quot;width:75%&quot;&gt;</code></pre>
 <p>This will load and display <code>images/image.jpg</code> (I usually keep my images inside an <code>images</code> folder to reduce clutter). The <code>style</code> components control things like adding a border or adjusting the image height or width, along with lots of other things – googling around can help if you want to change the style settings. If you want your style rules to apply to all images it can be easier to write a short CSS file, but that’s beyond what we’re going to do now.</p>
