--- a/iteration_and_listcols.html
+++ b/iteration_and_listcols.html
@@ -463,14 +463,37 @@ div.tocify {
 
 <p>We’ve noted that functions are helpful when you repeat code more than twice; we’ve also noted that a lot of statistical methods involve doing the same thing a large number of times. Putting those together motivates a careful approach to iteratation.</p>
 <p>Meanwhile, R’s data structures, especially data frames, are surprisingly flexible. This is useful when the “observations” you want to store become more complex than single values; for example, each row many contain a few scalar observations as well a complete data set. In these cases, <em>list columns</em> are an appropriate column type, and <code>map</code> functions provide a way to interact with those columns.</p>
-<p>This is the second module in the <a href="topic_iteration.html">Iteration</a> topic; the relevant slack channel is <a href="https://p8105fall2019.slack.com/messages/CN8KK99NJ">here</a>.</p>
-<div id="some-slides" class="section level2">
-<h2>Some slides</h2>
-<script async class="speakerdeck-embed" data-id="f0d309fcbf2c4d5d9d121eee4a6144ee" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<p>This is the second module in the <a href="topic_iteration.html">Iteration</a> topic.</p>
+<div id="overview" class="section level2 tabset tabset-pills">
+<h2>Overview</h2>
+<div id="learning-objectives" class="section level3">
+<h3>Learning Objectives</h3>
+<p>Use loops, apply and map functions, and simulate datasets in R.</p>
+</div>
+<div id="slide-deck" class="section level3">
+<h3>Slide Deck</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://speakerdeck.com/player/f0d309fcbf2c4d5d9d121eee4a6144ee" 
+    allowfullscreen 
+    frameborder="0"
+    class="video"> </iframe></p>
+</div>
 <div style="margin-bottom:5px">
 <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-iteration-and-listcols" title="Iteration and List Columns" target="_blank">Iteration and List Columns</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>.
 </div>
 <p><br></p>
+<hr />
+</div>
+<div id="video-lecture" class="section level3">
+<h3>Video Lecture</h3>
+<div class="vid_container">
+<p><iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video"> </iframe></p>
+</div>
+<hr />
+</div>
 </div>
 <div id="example" class="section level2">
 <h2>Example</h2>
@@ -613,7 +636,9 @@ output = map(df, median)
 <h3>Revisiting Napoleon</h3>
 <p>In <a href="reading_data_from_the_web.html">reading data from the web</a> and elsewhere, we wrote code that allowed us to scrape information in Amazon reviews; in <a href="writing_functions.html">writing functions</a> we wrapped that code into a function called <code>read_page_reviews</code> which, for a given <code>url</code>, produces a data frame containing review titles, star ratings, and text.</p>
 <pre class="r"><code>library(rvest)
+## Warning: package &#39;rvest&#39; was built under R version 3.6.3
 ## Loading required package: xml2
+## Warning: package &#39;xml2&#39; was built under R version 3.6.3
 ## 
 ## Attaching package: &#39;rvest&#39;
 ## The following object is masked from &#39;package:purrr&#39;:
@@ -700,9 +725,9 @@ weather_nest
 ## # A tibble: 3 x 3
 ##   name           id          data              
 ##   &lt;chr&gt;          &lt;chr&gt;       &lt;list&gt;            
-## 1 CentralPark_NY USW00094728 &lt;tibble [366 × 4]&gt;
-## 2 Waikiki_HA     USC00519397 &lt;tibble [366 × 4]&gt;
-## 3 Waterhole_WA   USS0023B17S &lt;tibble [366 × 4]&gt;</code></pre>
+## 1 CentralPark_NY USW00094728 &lt;tibble [366 x 4]&gt;
+## 2 Waikiki_HA     USC00519397 &lt;tibble [366 x 4]&gt;
+## 3 Waterhole_WA   USS0023B17S &lt;tibble [366 x 4]&gt;</code></pre>
 <p>Here I’ve used <code>nest</code> by specifying a column range to collapse within remaining variable values.</p>
 <p>The <code>name</code> column is a character column – if you pull this column from the <code>weather</code> data frame, the result is a character vector. Similarly, the <code>data</code> column is a <em>list column</em> – on it’s own, it’s a list.</p>
 <pre class="r"><code>weather_nest %&gt;% pull(name)
@@ -710,63 +735,83 @@ weather_nest
 weather_nest %&gt;% pull(data)
 ## [[1]]
 ## # A tibble: 366 x 4
-##   date        prcp  tmax  tmin
-##   &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-## 1 2016-01-01     0   5.6   1.1
-## 2 2016-01-02     0   4.4   0  
-## 3 2016-01-03     0   7.2   1.7
-## 4 2016-01-04     0   2.2  -9.9
-## 5 2016-01-05     0  -1.6 -11.6
-## 6 2016-01-06     0   5    -3.8
-## # … with 360 more rows
+##    date        prcp  tmax  tmin
+##    &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+##  1 2016-01-01     0   5.6   1.1
+##  2 2016-01-02     0   4.4   0  
+##  3 2016-01-03     0   7.2   1.7
+##  4 2016-01-04     0   2.2  -9.9
+##  5 2016-01-05     0  -1.6 -11.6
+##  6 2016-01-06     0   5    -3.8
+##  7 2016-01-07     0   7.8  -0.5
+##  8 2016-01-08     0   7.8  -0.5
+##  9 2016-01-09     0   8.3   4.4
+## 10 2016-01-10   457  15     4.4
+## # ... with 356 more rows
 ## 
 ## [[2]]
 ## # A tibble: 366 x 4
-##   date        prcp  tmax  tmin
-##   &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-## 1 2016-01-01     0  29.4  16.7
-## 2 2016-01-02     0  28.3  16.7
-## 3 2016-01-03     0  28.3  16.7
-## 4 2016-01-04     0  28.3  16.1
-## 5 2016-01-05     0  27.2  16.7
-## 6 2016-01-06     0  27.2  20  
-## # … with 360 more rows
+##    date        prcp  tmax  tmin
+##    &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+##  1 2016-01-01     0  29.4  16.7
+##  2 2016-01-02     0  28.3  16.7
+##  3 2016-01-03     0  28.3  16.7
+##  4 2016-01-04     0  28.3  16.1
+##  5 2016-01-05     0  27.2  16.7
+##  6 2016-01-06     0  27.2  20  
+##  7 2016-01-07    46  27.8  18.3
+##  8 2016-01-08     3  28.3  17.8
+##  9 2016-01-09     8  27.8  19.4
+## 10 2016-01-10     3  28.3  18.3
+## # ... with 356 more rows
 ## 
 ## [[3]]
 ## # A tibble: 366 x 4
-##   date        prcp  tmax  tmin
-##   &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-## 1 2016-01-01     0   1.7  -5.9
-## 2 2016-01-02    25  -0.1  -6  
-## 3 2016-01-03     0  -5   -10  
-## 4 2016-01-04    25   0.3  -9.8
-## 5 2016-01-05    25   1.9  -1.8
-## 6 2016-01-06    25   1.4  -2.6
-## # … with 360 more rows</code></pre>
+##    date        prcp  tmax  tmin
+##    &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+##  1 2016-01-01     0   1.7  -5.9
+##  2 2016-01-02    25  -0.1  -6  
+##  3 2016-01-03     0  -5   -10  
+##  4 2016-01-04    25   0.3  -9.8
+##  5 2016-01-05    25   1.9  -1.8
+##  6 2016-01-06    25   1.4  -2.6
+##  7 2016-01-07     0   1.4  -3.9
+##  8 2016-01-08     0   1.1  -4  
+##  9 2016-01-09     0   1.4  -4.5
+## 10 2016-01-10     0   2.3  -3.8
+## # ... with 356 more rows</code></pre>
 <p>The list column really is a list, and will behave as such elsewhere in R. So, for example, you can examine the first list entry using usual list index procedures.</p>
 <pre class="r"><code>weather_nest$data[[1]]
 ## # A tibble: 366 x 4
-##   date        prcp  tmax  tmin
-##   &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-## 1 2016-01-01     0   5.6   1.1
-## 2 2016-01-02     0   4.4   0  
-## 3 2016-01-03     0   7.2   1.7
-## 4 2016-01-04     0   2.2  -9.9
-## 5 2016-01-05     0  -1.6 -11.6
-## 6 2016-01-06     0   5    -3.8
-## # … with 360 more rows</code></pre>
+##    date        prcp  tmax  tmin
+##    &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+##  1 2016-01-01     0   5.6   1.1
+##  2 2016-01-02     0   4.4   0  
+##  3 2016-01-03     0   7.2   1.7
+##  4 2016-01-04     0   2.2  -9.9
+##  5 2016-01-05     0  -1.6 -11.6
+##  6 2016-01-06     0   5    -3.8
+##  7 2016-01-07     0   7.8  -0.5
+##  8 2016-01-08     0   7.8  -0.5
+##  9 2016-01-09     0   8.3   4.4
+## 10 2016-01-10   457  15     4.4
+## # ... with 356 more rows</code></pre>
 <p>Of course, if you can <code>nest</code> data you should be able to <code>unnest</code> it as well, and you can (with the caveat that you’re unnesting a list column that contains a data frame).</p>
 <pre class="r"><code>unnest(weather_nest, cols = data)
 ## # A tibble: 1,098 x 6
-##   name           id          date        prcp  tmax  tmin
-##   &lt;chr&gt;          &lt;chr&gt;       &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-## 1 CentralPark_NY USW00094728 2016-01-01     0   5.6   1.1
-## 2 CentralPark_NY USW00094728 2016-01-02     0   4.4   0  
-## 3 CentralPark_NY USW00094728 2016-01-03     0   7.2   1.7
-## 4 CentralPark_NY USW00094728 2016-01-04     0   2.2  -9.9
-## 5 CentralPark_NY USW00094728 2016-01-05     0  -1.6 -11.6
-## 6 CentralPark_NY USW00094728 2016-01-06     0   5    -3.8
-## # … with 1,092 more rows</code></pre>
+##    name           id          date        prcp  tmax  tmin
+##    &lt;chr&gt;          &lt;chr&gt;       &lt;date&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+##  1 CentralPark_NY USW00094728 2016-01-01     0   5.6   1.1
+##  2 CentralPark_NY USW00094728 2016-01-02     0   4.4   0  
+##  3 CentralPark_NY USW00094728 2016-01-03     0   7.2   1.7
+##  4 CentralPark_NY USW00094728 2016-01-04     0   2.2  -9.9
+##  5 CentralPark_NY USW00094728 2016-01-05     0  -1.6 -11.6
+##  6 CentralPark_NY USW00094728 2016-01-06     0   5    -3.8
+##  7 CentralPark_NY USW00094728 2016-01-07     0   7.8  -0.5
+##  8 CentralPark_NY USW00094728 2016-01-08     0   7.8  -0.5
+##  9 CentralPark_NY USW00094728 2016-01-09     0   8.3   4.4
+## 10 CentralPark_NY USW00094728 2016-01-10   457  15     4.4
+## # ... with 1,088 more rows</code></pre>
 <p>Nesting columns can help with data organization and comprehension by masking complexity you’re less concerned about right now and clarifying the things you are concerned about. In the weather data, it can be helpful to think of stations as the basic unit of observation, and daily weather recordings as a more granular level of observation. Nesting can also simplify the use of analytic approaches across levels of a higher variable.</p>
 </div>
 <div id="operations-on-list-columns" class="section level3">
@@ -856,9 +901,9 @@ weather_nest
 ## # A tibble: 3 x 4
 ##   name           id          data               models
 ##   &lt;chr&gt;          &lt;chr&gt;       &lt;list&gt;             &lt;list&gt;
-## 1 CentralPark_NY USW00094728 &lt;tibble [366 × 4]&gt; &lt;lm&gt;  
-## 2 Waikiki_HA     USC00519397 &lt;tibble [366 × 4]&gt; &lt;lm&gt;  
-## 3 Waterhole_WA   USS0023B17S &lt;tibble [366 × 4]&gt; &lt;lm&gt;</code></pre>
+## 1 CentralPark_NY USW00094728 &lt;tibble [366 x 4]&gt; &lt;lm&gt;  
+## 2 Waikiki_HA     USC00519397 &lt;tibble [366 x 4]&gt; &lt;lm&gt;  
+## 3 Waterhole_WA   USS0023B17S &lt;tibble [366 x 4]&gt; &lt;lm&gt;</code></pre>
 <p>This is great! We now have a data frame that has rows for each station; columns contain weather datasets and fitted models. This makes it very easy to keep track of models across stations, and to perform additional analyses.</p>
 <p>This is, for sure, a fairly complex bit of code, but in just a few lines we’re able to fit separate linear models to each of our stations. And, once you get used to list columns, <code>map</code>, and the rest of it, these lines of code are pretty clear and can be extended to larger datasets with more complex structures.</p>
 </div>
@@ -870,6 +915,8 @@ weather_nest
          urls = str_c(url_base, page)) %&gt;% 
   mutate(reviews = map(urls, read_page_reviews)) %&gt;% 
   unnest()
+## Warning: `data_frame()` is deprecated, use `tibble()`.
+## This warning is displayed once per session.
 ## Warning: `cols` is now required.
 ## Please use `cols = c(reviews)`</code></pre>
 <p>I’ll also revisit a way to load and tidy the LoTR words data that starts with a dataframe containing cell ranges for each movie. Of all the approaches we’ve seen, this is probably my favorite.</p>
