--- a/git.html
+++ b/git.html
@@ -466,7 +466,7 @@ div.tocify {
 <h2>Overview</h2>
 <div id="learning-objectives" class="section level3">
 <h3>Learning Objectives</h3>
-<p>We’ll be getting up-to-speed on the basic tools in R. As part of that, we’ll define and establish some good habits.</p>
+<p>Git is awesome … but it isn’t easy at first. We’ll look at how to use git and github in a data science workflow.</p>
 </div>
 <div id="slide-deck" class="section level3">
 <h3>Slide Deck</h3>
@@ -487,7 +487,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/8jOpEnJx_A4"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -531,8 +531,7 @@ div.tocify {
 <p>Now I’ll start actually doing stuff. As I noted above, I’m going to repeat some of <a href="writing_with_data.html">Writing with Data</a> – my goal is to focus on the git side of things without distractions from new code. As a first step, I’ll add an R Markdown template (download <a href="resources/template.Rmd">here</a>), knit it, and commit.</p>
 <p><img src="images/git_second_commit.png" style="width:80%"></p>
 <p>Next I’ll add an R Markdown file looking at basic plots (shown below; download <a href="resources/rmd_basic_plots.Rmd">here</a>) to my repository / directory.</p>
-<pre><code>
----
+<pre><code>---
 title: &quot;Basic Plots&quot;
 author: &quot;Jeff Goldsmith&quot;
 date: 2019-09-10
@@ -612,7 +611,7 @@ ggplot(plot_df, aes(x = x, y = y)) + geom_point()
 <p>We’ve both written text in the same place, and have to make a decision about which to keep. You have a couple of options: one is to open the file in question, go through each conflict (which will be indicated in text), fix the text to your liking and remove all the markers that indicate the conflicts. We can also do this with the help of a merge tool, which will show where differences are and allow us to make a choice about which to keep.</p>
 <p><img src="images/git_conflict_tool.png" style="width:80%"></p>
 <p>After resolving conflicts, should commit the changes and push the new unified version to the remote repository.</p>
-<p>Merge conflicts are a fact of life in collaborative work, and you probably run into them more often than you’d like to admit (e.g. “Jeff’s Conflicted Copy” in Dropbox, or parallel versions of Word documents). Git can seem like it makes this worse, but that’s mostly because it’s new and scary, and it forces you to address conflicts as they arise in a structured way rather than ignoring issues / managing them in an ad-hoc way.</p>
+<p>Merge conflicts are a fact of life in collaborative work, and you probably run into them more often than you’d like to admit (e.g. “Jeff’s Conflicted Copy” in Dropbox, or parallel versions of Word documents). Git can seem like it makes this worse, but that’s mostly because it’s new and scary, and it forces you to address conflicts as they arise in a structured way rather than ignoring issues / managing them in an ad-hoc way.</p>
 <p>That said, try to coordinate with teammates so it’s clear who is working on what and when they’re doing it.</p>
 </div>
 <div id="new-workflow-project-first" class="section level3">
@@ -697,7 +696,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
