--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ $(document).ready(function () {
 <p>This course is being offered in the Fall of 2020 through the Biostatistics Department at the Columbia School of Public Health; the syllabus is available here [<a href="resources/P8105_Syllabus.pdf">pdf</a> | <a href="resources/P8105_Syllabus.docx">docx</a>].</p>
 <div id="live-sessions" class="section level3">
 <h3>Live Sessions</h3>
-<p>Live (synchronous) sessions can be accessed through this <a href="https://columbiacuimc.zoom.us/j/97364164791">Zoom link</a> (passcode: 764753), and will be held on the following dates:</p>
+<p>Live (synchronous) sessions will be held on the following dates:</p>
 <ul>
 <li>9/8 (What is Data Science?)</li>
 <li>9/15 (Building Blocks)</li>
@@ -403,6 +403,7 @@ $(document).ready(function () {
 <li>11/24 (Linear Models)</li>
 <li>TBD (Extra Topics)</li>
 </ul>
+<p>Zoom information for live sessions is available through Courseworks.</p>
 </div>
 <div id="people" class="section level3">
 <h3>People</h3>
